# App-ciberseguridad

./: .gitignore  PR_BODY.md
app/: db.py  main.py
escudo-ia-backend/: .env.example  Dockerfile.backend  Dockerfile.frontend  docker-compose.yml  install.sh  nginx.conf  pyproject.toml
escudo-ia-backend/app/: auth.py  main.py  models.py  schemas.py
escudo-ia-backend/frontend/: package-lock.json  package.json
escudo-ia-backend/frontend/src/: App.tsx
escudo-ia-backend/frontend/src/pages/: LoginPage.tsx
frontend/src/: App.tsx  main.tsx  types.ts
frontend/src/components/: ProtectedRoute.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: DashboardPage.tsx  SignupPage.tsx
frontend/src/state/: AuthContext.tsx
scripts/: token_parse.py
tests/: test_auth_and_scan.py
